SubBt/force-app/main/default/objects/Project_Scheduler__c/Project_Scheduler__c.object-meta.xml
<CustomObject>
    <label>Project Scheduler</label>
    <nameField>
        <displayFormat>PS-{00000}</displayFormat>
        <label>Project Scheduler Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Scheduler</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>