SubBt/force-app/main/default/objects/Project_Scheduler__c/fields/Number_of_resoures__c.field-meta.xml
<CustomField>
    <fullName>Number_of_resoures__c</fullName>
    <label>Number of resoures</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>