SubBt/force-app/main/default/objects/Project_Scheduler__c/fields/Project_Duration_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Project_Duration_in_Days__c</fullName>
    <label>Project Duration in Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>