SubBt/force-app/main/default/objects/Project_Scheduler__c/fields/Project_Working_Days__c.field-meta.xml
<CustomField>
    <fullName>Project_Working_Days__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Working Days</label>
    <type>Checkbox</type>
</CustomField>