SubBt/force-app/main/default/objects/Project_Scheduler__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order</label>
    <referenceTo>Purchase_Order__c</referenceTo>
    <relationshipLabel>Project Scheduler</relationshipLabel>
    <relationshipName>Project_Scheduler</relationshipName>
    <type>Lookup</type>
</CustomField>